force-app/main/default/objects/Lead/fields/AdGroupParameter__c.field-meta.xml
<CustomField>
    <fullName>AdGroupParameter__c</fullName>
    <label>Paramter Anzeigengruppe</label>
    <length>100</length>
    <type>Text</type>
</CustomField>