force-app/main/default/objects/Lead/fields/BusinessAddressExt__c.field-meta.xml
<CustomField>
    <fullName>BusinessAddressExt__c</fullName>
    <label>Adresszusatz Geschäftsadresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>