force-app/main/default/objects/Lead/fields/BusinessAddressId__c.field-meta.xml
<CustomField>
    <fullName>BusinessAddressId__c</fullName>
    <label>Adress ID Geschäftsadresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>