force-app/main/default/objects/Lead/fields/BusinessCityExt__c.field-meta.xml
<CustomField>
    <fullName>BusinessCityExt__c</fullName>
    <label>Stadtteil Geschäftsadresse</label>
    <length>100</length>
    <type>Text</type>
</CustomField>