force-app/main/default/objects/Lead/fields/BusinessHouseNoExt__c.field-meta.xml
<CustomField>
    <fullName>BusinessHouseNoExt__c</fullName>
    <label>Hausnummer Zusatz Geschäftsadresse</label>
    <length>6</length>
    <type>Text</type>
</CustomField>