force-app/main/default/objects/Lead/fields/BusinessState__c.field-meta.xml
<CustomField>
    <fullName>BusinessState__c</fullName>
    <label>Bundesland Geschäftsadresse</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BusinessCountry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>GermanStates</valueSetName>
    </valueSet>
</CustomField>