force-app/main/default/objects/Lead/fields/CampaignParameter__c.field-meta.xml
<CustomField>
    <fullName>CampaignParameter__c</fullName>
    <label>Paramter Kampagne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>