force-app/main/default/objects/Lead/fields/CloseLostReason__c.field-meta.xml
<CustomField>
    <fullName>CloseLostReason__c</fullName>
    <description>Used to keep track of the reason why a Lead was lost</description>
    <label>Gründe kein Potenzial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Close_Lost_Reasons</valueSetName>
    </valueSet>
</CustomField>