force-app/main/default/objects/Lead/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Unternehmensbereich</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Einkauf</fullName>
            </value>
            <value>
                <fullName>Externer Berater</fullName>
            </value>
            <value>
                <fullName>Finanzen/Verwaltung</fullName>
            </value>
            <value>
                <fullName>Geschäftsleitung</fullName>
            </value>
            <value>
                <fullName>IT/TK</fullName>
            </value>
            <value>
                <fullName>Marketing/Vertrieb</fullName>
            </value>
            <value>
                <fullName>Sonstiges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>