force-app/main/default/objects/Lead/fields/FiberBandwidth__c.field-meta.xml
<CustomField>
    <fullName>FiberBandwidth__c</fullName>
    <label>Glasfaser Bandbreite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100 Mbit/s</fullName>
            </value>
            <value>
                <fullName>300 Mbit/s</fullName>
            </value>
            <value>
                <fullName>600 Mbit/s</fullName>
            </value>
            <value>
                <fullName>1000 Mbit/s</fullName>
            </value>
            <value>
                <fullName>10000 Mbit/s</fullName>
                <isActive>false</isActive>
                <label>10000 Mbit/s</label>
            </value>
            <value>
                <fullName>50 Mbit/s</fullName>
                <isActive>false</isActive>
                <label>50 Mbit/s</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>