force-app/main/default/objects/Lead/fields/FiberProduct__c.field-meta.xml
<CustomField>
    <fullName>FiberProduct__c</fullName>
    <label>Glasfaser Produkt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plusnet Office (asymmetrische Bandbreite)</fullName>
            </value>
            <value>
                <fullName>Plusnet Glasfaser Business</fullName>
                <isActive>false</isActive>
                <label>Plusnet Glasfaser Business</label>
            </value>
            <value>
                <fullName>Plusnet Glasfaser Office</fullName>
                <isActive>false</isActive>
                <label>Plusnet Glasfaser Office</label>
            </value>
            <value>
                <fullName>Plusnet Glasfaser SOHO</fullName>
                <isActive>false</isActive>
                <label>Plusnet Glasfaser SOHO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>