force-app/main/default/objects/Lead/fields/GoogleClickID__c.field-meta.xml
<CustomField>
    <fullName>GoogleClickID__c</fullName>
    <label>Google Click ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>