force-app/main/default/objects/Lead/fields/GoogleKeyword__c.field-meta.xml
<CustomField>
    <fullName>GoogleKeyword__c</fullName>
    <label>Google Keyword</label>
    <length>100</length>
    <type>Text</type>
</CustomField>