force-app/main/default/objects/Lead/fields/GoogleMatchstring__c.field-meta.xml
<CustomField>
    <fullName>GoogleMatchstring__c</fullName>
    <label>Google Matchstring</label>
    <length>100</length>
    <type>Text</type>
</CustomField>