force-app/main/default/objects/Lead/fields/InternalComment__c.field-meta.xml
<CustomField>
    <fullName>InternalComment__c</fullName>
    <label>Kommentar (intern)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>