force-app/main/default/objects/Lead/fields/IsBusinessAddressValid__c.field-meta.xml
<CustomField>
    <fullName>IsBusinessAddressValid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to keep track of the Business Address validation</description>
    <label>Is Business Address Valid</label>
    <type>Checkbox</type>
</CustomField>