force-app/main/default/objects/Lead/fields/IsLead__c.field-meta.xml
<CustomField>
    <fullName>IsLead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ist Lead</label>
    <type>Checkbox</type>
</CustomField>