force-app/main/default/objects/Lead/fields/IsServiceAddressValid__c.field-meta.xml
<CustomField>
    <fullName>IsServiceAddressValid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to keep track of the Service Address validation</description>
    <label>Is Service Address Valid</label>
    <type>Checkbox</type>
</CustomField>