force-app/main/default/objects/Lead/fields/MediumParameter__c.field-meta.xml
<CustomField>
    <fullName>MediumParameter__c</fullName>
    <label>Parameter Medium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>