force-app/main/default/objects/Lead/fields/NoteCloseLostReason__c.field-meta.xml
<CustomField>
    <fullName>NoteCloseLostReason__c</fullName>
    <label>Sonstige Gründe kein Potenzial</label>
    <type>TextArea</type>
</CustomField>