force-app/main/default/objects/Lead/fields/ProjectContentOrProductInterest__c.field-meta.xml
<CustomField>
    <fullName>ProjectContentOrProductInterest__c</fullName>
    <label>Projektinhalt / Produktinteresse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>