force-app/main/default/objects/Lead/fields/ProspectMessage__c.field-meta.xml
<CustomField>
    <fullName>ProspectMessage__c</fullName>
    <label>Nachricht an Plusnet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>