force-app/main/default/objects/Lead/fields/Register__c.field-meta.xml
<CustomField>
    <fullName>Register__c</fullName>
    <label>Register</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HRA</fullName>
            </value>
            <value>
                <fullName>HRB</fullName>
            </value>
            <value>
                <fullName>GnR</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>VR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>