force-app/main/default/objects/Lead/fields/ServiceAddress__c.field-meta.xml
<CustomField>
    <fullName>ServiceAddress__c</fullName>
    <formula>ServiceStreet__c + &apos; &apos; + ServiceHouseNo__c + IF(ISNULL(ServiceHouseNoExt__c), &apos;&apos;, &apos; &apos; + ServiceHouseNoExt__c) +
IF(ISNULL(ServiceAddressExt__c), &apos;&apos;, BR() + ServiceAddressExt__c) +
ServicePostalCode__c + &apos; &apos; + ServiceCity__c + IF(ISNULL(ServiceCityExt__c), &apos;&apos;, &apos; &apos; + ServiceCityExt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serviceadresse</label>
    <type>Text</type>
</CustomField>