force-app/main/default/objects/Lead/fields/ServiceAddressExt__c.field-meta.xml
<CustomField>
    <fullName>ServiceAddressExt__c</fullName>
    <label>Adresszusatz Service Adresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>