force-app/main/default/objects/Lead/fields/ServiceAddressId__c.field-meta.xml
<CustomField>
    <fullName>ServiceAddressId__c</fullName>
    <label>Adress ID Service Adresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>