force-app/main/default/objects/Lead/fields/ServiceCity__c.field-meta.xml
<CustomField>
    <fullName>ServiceCity__c</fullName>
    <label>Stadt Service Adresse</label>
    <length>100</length>
    <type>Text</type>
</CustomField>