force-app/main/default/objects/Lead/fields/ServiceCityExt__c.field-meta.xml
<CustomField>
    <fullName>ServiceCityExt__c</fullName>
    <label>Stadtteil Service Adresse</label>
    <length>100</length>
    <type>Text</type>
</CustomField>