force-app/main/default/objects/Lead/fields/ServiceCountry__c.field-meta.xml
<CustomField>
    <fullName>ServiceCountry__c</fullName>
    <label>Land Service Adresse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>