force-app/main/default/objects/Lead/fields/ServiceHouseNo__c.field-meta.xml
<CustomField>
    <fullName>ServiceHouseNo__c</fullName>
    <label>Hausnummer Service Adresse</label>
    <length>4</length>
    <type>Text</type>
</CustomField>