force-app/main/default/objects/Lead/fields/ServiceHouseNoExt__c.field-meta.xml
<CustomField>
    <fullName>ServiceHouseNoExt__c</fullName>
    <label>Hausnummer Zusatz Service Adresse</label>
    <length>6</length>
    <type>Text</type>
</CustomField>