force-app/main/default/objects/Lead/fields/ServicePostalCode__c.field-meta.xml
<CustomField>
    <fullName>ServicePostalCode__c</fullName>
    <label>PLZ Service Adresse</label>
    <length>10</length>
    <type>Text</type>
</CustomField>