force-app/main/default/objects/Lead/fields/ServiceState__c.field-meta.xml
<CustomField>
    <fullName>ServiceState__c</fullName>
    <label>Bundesland Service Adresse</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ServiceCountry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>GermanStates</valueSetName>
    </valueSet>
</CustomField>