force-app/main/default/objects/Lead/fields/ServiceStreet__c.field-meta.xml
<CustomField>
    <fullName>ServiceStreet__c</fullName>
    <label>Strasse Service Adresse</label>
    <length>40</length>
    <type>Text</type>
</CustomField>