force-app/main/default/objects/Lead/fields/SourceImport__c.field-meta.xml
<CustomField>
    <fullName>SourceImport__c</fullName>
    <label>Import Quelle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>