force-app/main/default/objects/Lead/fields/SourceParameter__c.field-meta.xml
<CustomField>
    <fullName>SourceParameter__c</fullName>
    <label>Parameter Quelle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>