force-app/main/default/objects/Lead/fields/SPRIStatus__c.field-meta.xml
<CustomField>
    <fullName>SPRIStatus__c</fullName>
    <description>Used to keep track of SPRI staus of a Service Address</description>
    <label>SPRI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPRI_Statuses</valueSetName>
    </valueSet>
</CustomField>