force-app/main/default/objects/Lead/fields/URLContactForm__c.field-meta.xml
<CustomField>
    <fullName>URLContactForm__c</fullName>
    <label>URL Kontaktformular</label>
    <type>Url</type>
</CustomField>