force-app/main/default/objects/Lead/fields/VATRegKey__c.field-meta.xml
<CustomField>
    <fullName>VATRegKey__c</fullName>
    <formula>TEXT(VATRegNoPrefix__c)&amp;VATRegNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Umsatzsteuer Key</label>
    <type>Text</type>
</CustomField>