force-app/main/default/objects/Lead/recordTypes/B2B_Standard_Lead.recordType-meta.xml
<RecordType>
    <fullName>B2B_Standard_Lead</fullName>
    <active>true</active>
    <businessProcess>Sales Lead</businessProcess>
    <description>Used for B2B Sales Leads</description>
    <label>B2B Standard Lead</label>
</RecordType>