force-app/main/default/objects/Lead/recordTypes/B2B_Telesales_Lead.recordType-meta.xml
<RecordType>
    <fullName>B2B_Telesales_Lead</fullName>
    <active>true</active>
    <businessProcess>Telesales Lead</businessProcess>
    <description>Used for B2B Telesales Leads</description>
    <label>B2B Telesales Lead</label>
</RecordType>