force-app/main/default/objects/Lead/validationRules/x01_Conversion_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>x01_Conversion_Validation</fullName>
    <active>true</active>
    <description>Used to prevent to convert a Lead if Service, Business Address IDs or SPRI status of a Lead are not valid</description>
    <errorConditionFormula>IsConverted &amp;&amp; 
    (ISPICKVAL(SPRIStatus__c,&quot;notPlanned&quot;) || 
					ISPICKVAL(SPRIStatus__c,&quot;&quot;) || 
					NOT(IsServiceAddressValid__c) || 
					NOT(IsBusinessAddressValid__c)
				)</errorConditionFormula>
    <errorMessage>Bitte füllen Sie vor der Umwandlung die folgenden Felder aus:
Geschäftsadresse, Service Adresse und SPRI Status. Lead Error x01.</errorMessage>
</ValidationRule>