force-app/main/default/objects/Lead/validationRules/x02_Closed_Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>x02_Closed_Lost_Reason</fullName>
    <active>true</active>
    <description>You have to specify a reason why the Lead was lost. Lead Error x02</description>
    <errorConditionFormula>AND(ISPICKVAL(Status,&quot;Kein Potenzial&quot;) &amp;&amp; ISPICKVAL(CloseLostReason__c,&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>CloseLostReason__c</errorDisplayField>
    <errorMessage>Geben Sie den Grund an, warum der Hinweis kein Potenzial hat. Lead Error x02.</errorMessage>
</ValidationRule>