force-app/main/default/objects/Lead/validationRules/x04_Salutation_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>x04_Salutation_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Salutation))</errorConditionFormula>
    <errorDisplayField>Salutation</errorDisplayField>
    <errorMessage>Salutation is mandatory. Lead Error x04</errorMessage>
</ValidationRule>