force-app/main/default/objects/Lead/validationRules/x05_First_Name_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>x05_First_Name_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name is mandatory . Lead error x05</errorMessage>
</ValidationRule>