force-app/main/default/objects/Lead/listViews/Lead_Management_Warteschlange.listView-meta.xml
<ListView>
    <fullName>Lead_Management_Warteschlange</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>BusinessCity__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Konvertiert,Kein Potenzial</value>
    </filters>
    <label>Lead-Management (Warteschlange)</label>
    <queue>Lead_Management_Queue</queue>
</ListView>