force-app/main/default/objects/Lead/listViews/My_In_Progress_Leads.listView-meta.xml
<ListView>
    <fullName>My_In_Progress_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>BusinessCity__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>In Bearbeitung</value>
    </filters>
    <label>Meine offenen Leads</label>
</ListView>