force-app/main/default/objects/Lead/listViews/MyUnreadLeads.listView-meta.xml
<ListView>
    <fullName>MyUnreadLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>BusinessCity__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.UNREAD</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Meine ungelesenen Leads</label>
</ListView>